test/func/bad-result-type.txt
;;; ERROR: 1
(module (func (result foo)))
(;; STDERR ;;;
func/bad-result-type.txt:2:23: unexpected token "foo"
func/bad-result-type.txt:2:26: syntax error, unexpected ), expecting VALUE_TYPE
;;; STDERR ;;)
